--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==5.2.8
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework-simplejwt==5.5.1
+drf-spectacular==0.29.0
 PyJWT==2.10.1
 sqlparse==0.5.4
 tzdata==2025.2
