--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework-simplejwt==5.5.1
 drf-spectacular==0.29.0
+Pillow==11.1.0
 PyJWT==2.10.1
 python-decouple==3.8
 sqlparse==0.5.4
